chore: update .gitignore and security standards
- Prevent build artifacts and node_modules from being tracked
- Protect sensitive files (.env, keys, certs)
- Optimize repository size and security